Fixed ride info to align with Google Maps

--- a/client/src/styles/RideinProgress.css
+++ b/client/src/styles/RideinProgress.css
@@ -1,30 +1,18 @@
-.ride-in-progress {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 20px;
-}
-
-#RideinProgress{
-    display: flex;
-    justify-content: space-between;
-    margin: 20px;
-}
-
-.map-container {
-    z-index: 1;
-    align-self: flex-start; 
-}
-  
 .ride-info {
-    z-index: 2;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     align-self: flex-end;
     border: 2px black;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    background-color: white;
+    max-width: 500px;
+    padding: 16px;
 }
   
 .progress {
@@ -37,7 +25,7 @@
 .ridebuttons {
     align-self: end;
     padding-right: 20px;
-    padding-bottom: 100px;
+    padding-bottom: 20px;
 }
 
 .ride-info button {
